--- a/src/blog/writing-better-css.mdx
+++ b/src/blog/writing-better-css.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'How to Create a New Button Variant'
-date: 2022-04-30
+title: 'Writing Better CSS'
+date: 2022-04-27
 published: true
-tags: ["How to"]
+tags: ["CSS"]
 ---
 
 <p className="lead">Praesent molestie velit justo, id ultrices mi pulvinar vel. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras euismod consectetur lacus, id semper risus sagittis sed. In eget est orci.</p>
