Query blog featured image

--- a/src/blog/writing-better-css.mdx
+++ b/src/blog/writing-better-css.mdx
@@ -1,8 +1,9 @@
 ---
 title: 'Writing Better CSS'
 date: 2022-04-27
+featuredImage: ../images/blog/writing-better-css.png
 published: true
-tags: ["CSS"]
+tags: ['css', 'Scss']
 ---
 
 <p className="lead">Praesent molestie velit justo, id ultrices mi pulvinar vel. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras euismod consectetur lacus, id semper risus sagittis sed. In eget est orci.</p>
