--- a/src/blog/how-to-create-a-new-button-variant.mdx
+++ b/src/blog/how-to-create-a-new-button-variant.mdx
@@ -1,8 +1,9 @@
 ---
 title: 'How to Create a New Button Variant'
 date: 2022-04-30
+featuredImage: ../images/blog/how-to-create-a-new-button-variant.png
 published: true
-tags: ["How to"]
+tags: ['how-to']
 ---
 
 <p className="lead">Praesent molestie velit justo, id ultrices mi pulvinar vel. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras euismod consectetur lacus, id semper risus sagittis sed. In eget est orci.</p>
