--- a/src/blog/how-to-create-a-new-button-variant.mdx
+++ b/src/blog/how-to-create-a-new-button-variant.mdx
@@ -2,6 +2,7 @@
 title: 'How to Create a New Button Variant'
 date: 2022-04-30
 featuredImage: ../images/blog/how-to-create-a-new-button-variant.png
+alt: 'This is a test alt value.'
 published: true
 tags: ['how-to']
 ---
