--- a/src/blog/writing-better-css.mdx
+++ b/src/blog/writing-better-css.mdx
@@ -1,283 +1,143 @@
 ---
 title: 'Writing Better CSS'
-date: 2022-04-27
+date: 2022-05-02
 featuredImage: ../images/blog/writing-better-css.png
-alt: 'This is a test alt value.'
+alt: 'An illustration about a woman who working on her computer.'
 published: true
-tags: ['css', 'scss']
+tags: ['css']
 ---
 
-<p class="lead">Readability, however, is emphasized above all else. A Markdown-formatted
-document should be publishable as-is, as plain text, without looking
-like it's been marked up with tags or formatting instructions.</p>
+<p class="lead">Writing better and more manageable CSS is something to strive for as a front-end developer. But what is better CSS? Well, it is a question that isn’t so easy to answer.</p>
 
-## Block Elements
+I think in CSS, determining what’s good is usually opinionated. Of course, there are some absolute truths, but anything in code depends on the context. A lousy code can do a job well; still, we should go for the better. Every project and team has its own needs, so using a universal solution is rarely possible.
 
-### Paragraphs and Line Breaks
+This article isn’t the solution for all of our problems with styles but only my personal experience.
 
-A paragraph is simply one or more consecutive lines of text, separated
-by one or more blank lines. (A blank line is any line that looks like a
-blank line -- a line containing nothing but spaces or tabs is considered
-blank.) Normal paragraphs should not be indented with spaces or tabs.
+## What Can Qualifies as Better CSS?
 
-The implication of the "one or more consecutive lines of text" rule is
-that Markdown supports "hard-wrapped" text paragraphs. This differs
-significantly from most other text-to-HTML formatters (including Movable
-Type's "Convert Line Breaks" option) which translate every line break
-character in a paragraph into a `<br />` tag.
+- A codebase that is easier to maintain. CSS can be chaotic; it is good if you are using a framework, so you are always familiar with each of your projects. It is also good if this framework is well developed and you regularly update it (so your code will be smaller and more modern).
+- In my opinion - in CSS context - modern (newer) means better. You clearly can’t compare a 12-based floated grid system with CSS Grid. The last one can do things we hardly could imagine a few years back. Just with the gap (which you can also apply using flexbox) property, we do magic.
+- Quality control is always necessary. Using Stylelint, Prefixer, or PurgeCSS, you can set up and follow strict rules to follow. It is helpful for just one person but superior in a team.
+- A smaller size always wins. It depends on the project, but what is smaller is almost always better on the web. Today we have a bloated web; it is nice to try to make it smaller.
+- Following any methodology like BEM, SMACSS, or CUBE CSS can solve the permissiveness of the stylesheets.
 
-When you *do* want to insert a `<br />` break tag using Markdown, you
-end a line with two or more spaces, then type return.
+## Alphabetize Your CSS Properties
 
-### Headers
+Writing your CSS properties in alphabetical order can sound a little strange. It was for me, and then I gave it a try.
 
-Markdown supports two styles of headers, [Setext] [1] and [atx] [2].
+Declaring the properties based on the alphabet is convenient and straightforward. You don’t have to think about what group with what and in which order. You get a clear rule to follow, and it simplifies things. For some reason, I always tried to group the properties somehow, and it was more work than it deserved.
 
-Optionally, you may "close" atx-style headers. This is purely
-cosmetic -- you can use this if you think it looks better. The
-closing hashes don't even need to match the number of hashes
-used to open the header. (The number of opening hashes
-determines the header level.)
+In CSS, we can create different property grouping logics like typography, layout, etc. But what happens if we get a new property, like the aspect-ratio? Is it fit somewhere, or do we have to create a new group? Does it break any recent order? How do we track any other new property?
 
+Using the ABC is nothing more than simplification. It is worth giving it a try. With Stylelint, you can quickly check the order (or fix it). For this, we use the Sass Guidelines config https://www.npmjs.com/package/stylelint-config-sass-guidelines. For the implementation, see. https://github.com/conedevelopment/sprucecss/blob/main/.stylelintrc.json
 
-### Blockquotes
+### Alphabetized Properties Example
 
-Markdown uses email-style `>` characters for blockquoting. If you're
-familiar with quoting passages of text in an email message, then you
-know how to create a blockquote in Markdown. It looks best if you hard
-wrap the text and put a `>` before every line:
-
-> This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,
-> consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.
-> Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
->
-> Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse
-> id sem consectetuer libero luctus adipiscing.
-
-Markdown allows you to be lazy and only put the `>` before the first
-line of a hard-wrapped paragraph:
-
-> This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,
-consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.
-Vestibulum enim wisi, viverra nec, fringilla in, laoreet vitae, risus.
-
-> Donec sit amet nisl. Aliquam semper ipsum sit amet velit. Suspendisse
-id sem consectetuer libero luctus adipiscing.
-
-Blockquotes can be nested (i.e. a blockquote-in-a-blockquote) by
-adding additional levels of `>`:
-
-> This is the first level of quoting.
->
-> > This is nested blockquote.
->
-> Back to the first level.
-
-Blockquotes can contain other Markdown elements, including headers, lists,
-and code blocks:
-
-> ## This is a header.
->
-> 1.   This is the first list item.
-> 2.   This is the second list item.
->
-> Here's some example code:
->
->     return shell_exec("echo $input | $markdown_script");
-
-Any decent text editor should make email-style quoting easy. For
-example, with BBEdit, you can make a selection and choose Increase
-Quote Level from the Text menu.
-
-
-### Lists
-
-Markdown supports ordered (numbered) and unordered (bulleted) lists.
-
-Unordered lists use asterisks, pluses, and hyphens -- interchangably
--- as list markers:
-
-*   Red
-*   Green
-*   Blue
-
-is equivalent to:
-
-+   Red
-+   Green
-+   Blue
-
-and:
-
--   Red
--   Green
--   Blue
-
-Ordered lists use numbers followed by periods:
-
-1.  Bird
-2.  McHale
-3.  Parish
-
-It's important to note that the actual numbers you use to mark the
-list have no effect on the HTML output Markdown produces. The HTML
-Markdown produces from the above list is:
-
-If you instead wrote the list in Markdown like this:
-
-1.  Bird
-1.  McHale
-1.  Parish
-
-or even:
-
-3. Bird
-1. McHale
-8. Parish
-
-you'd get the exact same HTML output. The point is, if you want to,
-you can use ordinal numbers in your ordered Markdown lists, so that
-the numbers in your source match the numbers in your published HTML.
-But if you want to be lazy, you don't have to.
-
-To make lists look nice, you can wrap items with hanging indents:
-
-*   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-    Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi,
-    viverra nec, fringilla in, laoreet vitae, risus.
-*   Donec sit amet nisl. Aliquam semper ipsum sit amet velit.
-    Suspendisse id sem consectetuer libero luctus adipiscing.
-
-But if you want to be lazy, you don't have to:
-
-*   Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-Aliquam hendrerit mi posuere lectus. Vestibulum enim wisi,
-viverra nec, fringilla in, laoreet vitae, risus.
-*   Donec sit amet nisl. Aliquam semper ipsum sit amet velit.
-Suspendisse id sem consectetuer libero luctus adipiscing.
-
-List items may consist of multiple paragraphs. Each subsequent
-paragraph in a list item must be indented by either 4 spaces
-or one tab:
-
-1.  This is a list item with two paragraphs. Lorem ipsum dolor
-    sit amet, consectetuer adipiscing elit. Aliquam hendrerit
-    mi posuere lectus.
-
-    Vestibulum enim wisi, viverra nec, fringilla in, laoreet
-    vitae, risus. Donec sit amet nisl. Aliquam semper ipsum
-    sit amet velit.
-
-2.  Suspendisse id sem consectetuer libero luctus adipiscing.
-
-It looks nice if you indent every line of the subsequent
-paragraphs, but here again, Markdown will allow you to be
-lazy:
-
-*   This is a list item with two paragraphs.
-
-    This is the second paragraph in the list item. You're
-only required to indent the first line. Lorem ipsum dolor
-sit amet, consectetuer adipiscing elit.
-
-*   Another item in the same list.
-
-To put a blockquote within a list item, the blockquote's `>`
-delimiters need to be indented:
-
-*   A list item with a blockquote:
-
-    > This is a blockquote
-    > inside a list item.
-
-To put a code block within a list item, the code block needs
-to be indented *twice* -- 8 spaces or two tabs:
-
-*   A list item with a code block:
-
-        <code goes here>
-
-### Code Blocks
-
-Pre-formatted code blocks are used for writing about programming or
-markup source code. Rather than forming normal paragraphs, the lines
-of a code block are interpreted literally. Markdown wraps a code block
-in both `<pre>` and `<code>` tags.
-
-To produce a code block in Markdown, simply indent every line of the
-block by at least 4 spaces or 1 tab.
-
-This is a normal paragraph:
-
-    This is a code block.
-
-Here is an example of AppleScript:
+In which order would you write the following code block? Sure, in the end, it doesn’t matter, but this small example shows us that finding any logic besides alphabetization is hard.
 
 ```scss
-tell application "Foo"
-    beep
-end tell
+img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+  user-select: none;
+}
 ```
 
-A code block continues until it reaches a line that is not indented
-(or the end of the article).
+## Choose a Methodology and Stick With It
 
-Within a code block, ampersands (`&`) and angle brackets (`<` and `>`)
-are automatically converted into HTML entities. This makes it very
-easy to include example HTML source code using Markdown -- just paste
-it and indent it, and Markdown will handle the hassle of encoding the
-ampersands and angle brackets. For example, this:
+A methodology is a lifesaver because we have just a few rules in CSS, which can result in weak code in the long run. Code quality matters. Like our choice, BEM, a methodology can help us to think in components and write more maintainable code.
 
-    <div class="footer">
-        &copy; 2004 Foo Corporation
-    </div>
+Using an extensive description, a system of rules when writing stylesheets isn’t the silver bullet but can help us hugely. For me, the most significant advantage of BEM is the possibility of thinking in components that in HTML/CSS are often not tangible concepts.
 
-Regular Markdown syntax is not processed within code blocks. E.g.,
-asterisks are just literal asterisks within a code block. This means
-it's also easy to use Markdown to write about Markdown's own syntax.
+Some excellent CSS architecture:
+- [BEM](http://smacss.com/)
+- [SMACSS](http://smacss.com/)
+- [ITCSS](https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/)
+- [CUBE CSS](https://cube.fyi/)
 
+### A BEM component example
+
+The following example is the .btn styling from Spruce CSS. For the complete example, check out the source code on GitHub https://github.com/conedevelopment/sprucecss/blob/main/scss/form/_button.scss.
+
+```scss
+.btn {
+  $this: &;
+
+  align-items: center;
+  border: 0;
+  border-radius: $btn-border-radius;
+  ...
+
+  // States
+  &:focus {
+    outline-color: transparent;
+    outline-style: solid;
+  }
+
+  &:disabled,
+  &--disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  // Icon button
+  &--icon {
+    padding: $btn-icon-padding;
+
+    &#{$this}--sm {
+      padding: $btn-icon-padding-sm;
+    }
+
+    &#{$this}--lg {
+      padding: $btn-icon-padding-lg;
+    }
+  }
+
+  // Sizes
+  &--sm {
+    font-size: $btn-font-size-sm;
+    padding: $btn-padding-sm;
+  }
+
+  &--lg {
+    padding: $btn-padding-lg;
+
+    @include breakpoint(md) {
+      font-size: $btn-font-size-lg;
+    }
+  }
+}
 ```
-tell application "Foo"
-    beep
-end tell
-```
 
-## Span Elements
+## Process Your Code
 
-### Links
+Quality control in CSS is a must. We can easily lint, prefix, and purge our code, so why not?
 
-Markdown supports two style of links: *inline* and *reference*.
+We should use the tools of the modern developer. I use Stylelint to lint my stylesheets with the Sass Guidelines and Autoprefixer to prefix some code (and check browser support) (https://github.com/browserslist/browserslist#best-practices).
 
-In both styles, the link text is delimited by [square brackets].
+I usually write SCSS. I like Sass; it is programmatic CSS which can be handy. It is also a way of processing your code. On a basic level, you can write fewer lines of code, separate them, and merge them as you wish. On a more intermediate level, you can make your small framework. Compiling Sass is easy with sass-cli; I wrote a simple guide about it on Pine.
 
-To create an inline link, use a set of regular parentheses immediately
-after the link text's closing square bracket. Inside the parentheses,
-put the URL where you want the link to point, along with an *optional*
-title for the link, surrounded in quotes. For example:
+If your codebase is vast and you don’t control it from the start, you can use Purge CSS to remove the unnecessary lines. For example, if you use the complete bootstrap grid, you will rarely use all of the classes. You can make your CSS 30-50% lighter if you purge it before publishing.
 
-This is [an example](http://example.com/) inline link.
+## Go Modern, Real Modern
 
-[This link](http://example.net/) has no title attribute.
+CSS is evolving fast lately 🥳. We don’t get prefixed properties; the vendors open the support almost simultaneously. If we get a new feature, we can practically use them. Of course, the collective support of the new feature isn’t that easy; always are some exceptions, but we rarely see new stuff with less than 80% on caniuse.com.
 
-### Emphasis
+Use the new things like aspect-ratio, grid, and logical properties. They simplify your code and make new solutions possible like never before.
 
-Markdown treats asterisks (`*`) and underscores (`_`) as indicators of
-emphasis. Text wrapped with one `*` or `_` will be wrapped with an
-HTML `<em>` tag; double `*`'s or `_`'s will be wrapped with an HTML
-`<strong>` tag. E.g., this input:
+[aspect-ratio example from spruce css]
 
-*single asterisks*
+If you worry about backward compatibility, make your code progressively enhanced and use @support. And keep in mind that inclusion is still necessary with the new features.
 
-_single underscores_
+If you need a quick recap about modern CSS, check out the Writing Better CSS article (https://www.aleksandrhovhannisyan.com/blog/writing-better-css/) by Aleksandr Hovhannisyan.
 
-**double asterisks**
+## Flexbox and Grid Are a Must
 
-__double underscores__
+The flexbox and grid are two fantastic and essential power tools. We can create layouts that were impossible just a few years ago with CSS.
 
-### Code
+This point is an addition to the previous one, but while the aspect-ratio is a minor new feature, these two are not (and not that new). Both of them are developed and improved regularly. The flexbox recently got the gap property, which is a game-changer.
 
-To indicate a span of code, wrap it with backtick quotes (`` ` ``).
-Unlike a pre-formatted code block, a code span indicates code within a
-normal paragraph. For example:
+These two can make any grid system obsolete (of course, based on the context, there are scenarios where they are still handy). They were created for layout, while the previous solutions were hacks.
 
-Use the `printf()` function.
+An excellent exercise for your next project: try to eliminate the grid system. I used the BS grid, which was ~1500 lines of code with its utilities. I used its 4-5%, now - with flex and grid - I achieve the same result with ~200 lines of code.
