--- a/src/blog/writing-better-css.mdx
+++ b/src/blog/writing-better-css.mdx
@@ -9,7 +9,7 @@ tags: ['css']
 
 <p class="lead">Writing better and more manageable CSS is something to strive for as a front-end developer. But what is better CSS? Well, it is a question that isn’t so easy to answer.</p>
 
-I think in CSS, determining what’s good is usually opinionated. Of course, there are some absolute truths, but anything in code depends on the context. A lousy code can do a job well; still, we should go for the better. Every project and team has its own needs, so using a universal solution is rarely possible.
+I think in CSS, determining what’s good is usually opinionated. Of course, there are some absolute truths, but many things in code depends on the context. A lousy code can do a job well; still, we should go for the better. Every project and team has its own needs, so using a universal solution is rarely possible.
 
 <Notification type="info">
   This article isn’t the solution for all of our problems with styles but only my personal experience.
