Add color purple back, remove beta text

--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -8,8 +8,6 @@ order: 1
 
 By minimalist, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components in it. The generated CSS is relatively tiny, somewhere around [+1000 lines of code](https://github.com/conedevelopment/sprucecss/blob/main/css/spruce.css) (it uses [normalize.css](https://necolas.github.io/normalize.css/), which takes up +300 lines of code). Although it seems small, it isn’t. Spruce CSS uses Sass with many variables, mixins, and functions to ease the work.
 
-<Notification type="wrong" icon={false}>Spruce CSS is in beta until the 1.0 release. <strong>At this point, many things are missing, could, and will change.</strong> We plan to release the first major version in the next 3-6 months (until 2022 July).</Notification>
-
 ## What Spruce CSS Wants to Be?
 
 - It wants to be a little bit better with each release.
@@ -49,3 +47,7 @@ Each system is opinionated but on a different level; this is valid for Spruce to
 ## We Left the Grid Out
 
 One controversial decision we made with Spruce is to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.
+
+## Color Purple
+
+Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn’t copy the color from Boostrap, unlike many other things. 😐
