Add new blog post

--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -17,7 +17,7 @@ Well, for this question, there is a lot of reasonable answers. In this case, we 
 - using mixins and functions, we can create valuable helpers to access various functions or generated variables.
 - It is a framework (of some sort); it must be expandable and adjustable. With Sass `@use`, we can easily configure the default variables and settings.
 - Sass is more than just nesting (an excellent feature too). We can programmatically write and generate our CSS code.
-- It is evolving with new features. Also, today [setup the compiling](https://pineco.de/the-simplest-sass-compile-setup/) is a simple task through npm script.
+- It is evolving with new features. Also, today [setup the compiling](https://sprucecss.com/blog/the-simplest-sass-compile-setup) is a simple task through npm script.
 
 ## Dart Sass, @use and @forward
 
