--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -430,10 +430,12 @@ $form-control-border-radius: $border-radius-sm;
 ### Check
 
 ```scss
+$form-check-border-width: 1px;
 $form-check-font-size: $font-size-base;
 $form-check-font-size-sm: $font-size-sm;
 $form-check-font-size-lg: $font-size-lg;
-$form-check-border-width: 1px;
+$form-check-font-weight: $form-label-font-weight;
+$form-check-line-height: $line-height-heading;
 ```
 
 ### Select
