Add $table-line-height to variables

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -470,6 +470,7 @@ $form-input-shadow-width: 0.25rem;
 
 ```scss
 $table-responsive-width: 40rem;
+$table-line-height: $line-height-md;
 $table-padding: map.get($spacers, s);
 $table-padding-sm: map.get($spacers, xxs) map.get($spacers, xs);
 ```
