--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -436,6 +436,7 @@ $form-check-font-size-sm: $font-size-sm;
 $form-check-font-size-lg: $font-size-lg;
 $form-check-font-weight: $form-label-font-weight;
 $form-check-line-height: $line-height-heading;
+$form-check-margin-bottom: -0.1em;
 ```
 
 ### Select
